; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c___insert.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c___insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_cache_metadata = type { i32, i32, i32 }

@M_VALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_cache_metadata*, i32, i32)* @__insert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__insert(%struct.dm_cache_metadata* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.dm_cache_metadata*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.dm_cache_metadata* %0, %struct.dm_cache_metadata** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* @M_VALID, align 4
  %12 = call i32 @pack_value(i32 %10, i32 %11)
  store i32 %12, i32* %9, align 4
  %13 = call i32 @__dm_bless_for_disk(i32* %9)
  %14 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %5, align 8
  %15 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %14, i32 0, i32 2
  %16 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %5, align 8
  %17 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @from_cblock(i32 %19)
  %21 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %5, align 8
  %22 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %21, i32 0, i32 1
  %23 = call i32 @dm_array_set_value(i32* %15, i32 %18, i32 %20, i32* %9, i32* %22)
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* %8, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %3
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %31

28:                                               ; preds = %3
  %29 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %5, align 8
  %30 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %29, i32 0, i32 0
  store i32 1, i32* %30, align 4
  store i32 0, i32* %4, align 4
  br label %31

31:                                               ; preds = %28, %26
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @pack_value(i32, i32) #1

declare dso_local i32 @__dm_bless_for_disk(i32*) #1

declare dso_local i32 @dm_array_set_value(i32*, i32, i32, i32*, i32*) #1

declare dso_local i32 @from_cblock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
